--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,12 @@ dependencies:
 
   #animation
   flutter_spinkit: ^5.2.0
+  
   url_launcher: ^6.1.11
+
+  #cache
+  shared_preferences: ^2.2.1
+  flutter_secure_storage: ^8.1.0
 
 dev_dependencies:
   flutter_test:
