part/part of, callback,klasorleme,provider

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,21 @@ dependencies:
   #animation
   flutter_spinkit: ^5.2.0
   
+  #Google
   url_launcher: ^6.1.11
+  json_serializable: ^6.6.2
+  json_annotation: ^4.8.1
 
   #cache
   shared_preferences: ^2.2.1
   flutter_secure_storage: ^8.1.0
+
+  #State
+  provider: ^6.0.5
+
+  #Core
+  equatable: ^2.0.5
+ 
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +54,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
