--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
 
   #animation
   flutter_spinkit: ^5.2.0
-  
+  lottie: ^2.3.2
   #Google
   url_launcher: ^6.1.11
   json_serializable: ^6.6.2
@@ -42,6 +42,8 @@ dependencies:
 
   #Core
   equatable: ^2.0.5
+  collection: ^1.17.0
+  
  
 
 dev_dependencies:
@@ -72,6 +74,7 @@ flutter:
   assets:
     
     - assets/png/
+    - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
