--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   #Core
   equatable: ^2.0.5
   collection: ^1.17.0
+
+  #Context
+  kartal: ^3.0.1
+  vexana: ^3.5.4
+  
   
   
  
@@ -64,6 +69,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
+  mockito: ^5.4.0
 
 
 # For information on the generic Dart part of this file, see the
