--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,6 @@ dependencies:
 
   #animation
   flutter_spinkit: ^5.2.0
-  lottie: ^2.3.2
   #Google
   url_launcher: ^6.1.11
   json_serializable: ^6.6.2
@@ -51,6 +50,13 @@ dependencies:
   #Context
   kartal: ^3.0.1
   vexana: ^3.5.4
+  flutter_bloc: ^8.1.3
+
+  #Localization
+  easy_localization: ^3.0.3
+
+  uikit:
+    path: module/uikit
   
   
   
@@ -85,7 +91,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    
+    - assets/translations/
     - assets/png/
     - assets/lottie/
 
