--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
     path: module/uikit
   flutter_dotenv: ^5.1.0
   pretty_dio_logger: ^1.3.1
+  logger: ^2.0.2+1
 
 dev_dependencies:
   flutter_test:
